hphp/test/slow/ext_spl_file/SplFileObject_construct_no_such_file.php.expectf
Fatal error: Uncaught exception 'RuntimeException' with message 'SplFileObject::__construct(missing): failed to open stream: No such file or directory' in %s/test/slow/ext_spl_file/SplFileObject_construct_no_such_file.php:3
Stack trace:
#0 %s: SplFileObject->__construct()
%a {main}
